--- a/src/app/components/prevote/prevote.module.css
+++ b/src/app/components/prevote/prevote.module.css
@@ -1,19 +1,25 @@
 .container {
-    background-color: #F98E11;
+    background-color: #FFFFFF;
      display: flex;
      align-items: center;
      padding: .5rem;
      margin: .5rem;
      border-radius: 8px;
+     height: 100%;
 }
 
 .img {
-     width: 105px;
-     height: 85px;
+     width: 4rem;
+     height: 4rem;
+     border-radius: 1.5rem;
 }
 
+.title{
+     font-size: 12px;
+     margin-left: .2rem;
+}
 .square {
-     background-color: #ffffff;
+     background-color: #2995CB;
      width: 4rem;
      height: 2rem;
      border: #000 dashed .5px;
@@ -21,17 +27,14 @@
      justify-content: center;
      align-items: center;
      margin-left: 12px;
-     color: #000;
+     color: #ffffff;
+     border-radius: 8px;
 }
 
-.title{
-     font-size: 14px;
-     margin-left: .2rem;
-}
 
 .description{
     font-size: 12px;
     margin-top: 1rem;
     margin-left: .2rem;
-     text-align: justify;
 }
+
