--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -5,6 +5,13 @@
     flex-direction: column;
     margin-top: 2rem;
 }
+.body{
+  display: flex;
+  padding: 3rem;
+  flex-direction: row-reverse;
+  justify-content: center;
+  
+}
 
 .link{
     display: flex;
@@ -16,13 +23,33 @@
 
 
 .li{
-  background: #FFB421;
+  background-color: #ffffff;
   padding: 1rem;
-  border-radius: 8px;
+  border-radius: 18px;
   transition: .3s;
+  font-weight: bold;
+  width: 80%;
+  font-size: 1.5rem;
+  -webkit-box-shadow: 0px 3px 0px 0px rgba(0,0,0,1);
+  -moz-box-shadow: 0px 3px 0px 0px rgba(0,0,0,1);
+  box-shadow: 0px 3px 0px 0px rgba(0,0,0,1);
+
 }
 
-.li:hover{
-  background: #ffb521cb;
+.logo{
+  width: 200px;
+  height: 200px;
+  object-fit: contain;
 
+}
+
+.arte{
+  width: 230px;
+  height: 200px;
+  object-fit: contain;
+}
+
+.container{
+  background-color: #2895D2;
+  height: 100%;
 }
