--- a/src/app/components/moviecard/moviecard.module.css
+++ b/src/app/components/moviecard/moviecard.module.css
@@ -102,6 +102,14 @@
   margin-right: 12px;
 }
 
+
+
+.footer{
+  display: flex;
+  justify-content: center;
+}
+
+
 .submitButton{
      background-color: #ffffff;
      color: #000000;
@@ -111,15 +119,12 @@
      margin-bottom: 1rem;
      font-size: 1.5rem;
      border: none;
-     /* -webkit-box-shadow: 0px 3px 0px 0px rgba(0,0,0,1);
+     -webkit-box-shadow: 0px 3px 0px 0px rgba(0,0,0,1);
      -moz-box-shadow: 0px 3px 0px 0px rgba(0,0,0,1);
-     box-shadow: 0px 3px 0px 0px rgba(0,0,0,1); */
+     box-shadow: 0px 3px 0px 0px rgba(0,0,0,1);
 }
 
-.footer{
-     display: flex;
-     justify-content: center;
-}
+
 
 .subdescription{
   font-weight: 700;
