--- a/src/app/components/moviecard/moviecard.module.css
+++ b/src/app/components/moviecard/moviecard.module.css
@@ -122,6 +122,9 @@
      -webkit-box-shadow: 0px 3px 0px 0px rgba(0,0,0,1);
      -moz-box-shadow: 0px 3px 0px 0px rgba(0,0,0,1);
      box-shadow: 0px 3px 0px 0px rgba(0,0,0,1);
+     opacity: 1;
+     position: relative;
+     z-index: 10;
 }
 
 
