--- a/src/app/components/header/header.module.css
+++ b/src/app/components/header/header.module.css
@@ -3,12 +3,11 @@
 }
 
 .dia{
-     font-size: 4rem;
-     color: #2794DA;
+     font-size: 3rem;
+     color: #fff;
      text-shadow: 2px 2px 0px #000000;
      height: 2.9rem;
-     
-
+     font-family: var(--agradir-grandlight);
 }
 
 .mes{
@@ -17,18 +16,22 @@
      text-shadow: 2px 2px 0px #000000;
      height: 2.5rem;
      margin-bottom: .5rem;
+     font-family: var(--agradir-grandheavy);
+
 
 }
 
 .mostra{
      color: #2794DA;
      text-shadow: 2px 2px 0px #000000;
-     font-size: 1.6rem;
+     font-size: 1.2rem;
+     font-family: var(--agradir-grandheavy);
+
 
 }
 
 .diasemana{
      color: #F8FCFC;
      text-shadow: 1px 1px 0px #000000;
-
+     font-family: var(--agradir-grandlight);
 }
