--- a/src/app/components/prevote/prevote.module.css
+++ b/src/app/components/prevote/prevote.module.css
@@ -5,7 +5,7 @@
      padding: .5rem;
      margin: .5rem;
      border-radius: 8px;
-     height: 100%;
+     /* height: 100%; */
 }
 
 .img {
@@ -15,20 +15,23 @@
 }
 
 .title{
-     font-size: 12px;
+     font-size: .65rem;
      margin-left: .2rem;
+     font-family: var(--agradir-grandheavy);
 }
 .square {
      background-color: #2995CB;
      width: 4rem;
      height: 2rem;
-     border: #000 dashed .5px;
+     /* border: #000 dashed .5px; */
      display: flex;
      justify-content: center;
      align-items: center;
      margin-left: 12px;
      color: #ffffff;
      border-radius: 8px;
+     font-family: var(--agradir-grandheavy);
+
 }
 
 
@@ -36,5 +39,6 @@
     font-size: 12px;
     margin-top: 1rem;
     margin-left: .2rem;
+    font-family: var(--agradir-regular);
 }
 
