--- a/src/app/mostra-panorama-22-11/confirmeseuvoto/confirmeseuvoto.module.css
+++ b/src/app/mostra-panorama-22-11/confirmeseuvoto/confirmeseuvoto.module.css
@@ -1,16 +1,19 @@
 .body{
       background-color: #B93368;
+      height: 100%;
 }
 
 .title{
       text-align: center;
       margin: 1rem;
       color: #FFF;
+      font-family: var(--agradir-grandheavy);
 }
 
 .paragraph{
      text-align: center;
-     margin-top: 50vh;
+     /* margin-top: 50vh; */
+     color: #FFF;
 }
 
 .footer{
@@ -19,6 +22,9 @@
       justify-content: center;
       align-items: center;
       margin-top: 2rem;
+      /* height: 100%; */
+      background-color: #B93368;
+
 }
 
 .button{
@@ -35,6 +41,8 @@
       -webkit-box-shadow: 0px 3px 0px 0px rgba(0,0,0,1);
       -moz-box-shadow: 0px 3px 0px 0px rgba(0,0,0,1);
       box-shadow: 0px 3px 0px 0px rgba(0,0,0,1);
+      font-family: var(--agradir-grandlight);
+
 }
 
 
@@ -51,14 +59,16 @@
       border: .1rem rgb(255, 255, 255) solid;
       margin-top: 1.1rem;
       margin-bottom: 1.5rem;
+      font-family: var(--agradir-grandlight);
 }
 
 .warning{
       text-align: center;
       color: #FFF;
-      font-size: .9rem;
+      font-size: .7rem;
       width: 70%;
       margin-top: .2rem;
+      font-family: var(--agradir-regular);
  }
 
  .container{
@@ -68,4 +78,5 @@
       justify-content: center;
       
  }
+
 
