--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -33,6 +33,7 @@
   -webkit-box-shadow: 0px 3px 0px 0px rgba(0,0,0,1);
   -moz-box-shadow: 0px 3px 0px 0px rgba(0,0,0,1);
   box-shadow: 0px 3px 0px 0px rgba(0,0,0,1);
+  font-family: var(--agradir-widelight);
 
 }
 
