--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,14 +1,7 @@
-.header_container {
-    display: flex;
-    justify-content: center;
-    text-align: center;
-    flex-direction: column;
-    margin-top: 2rem;
-}
+
 .body{
   display: flex;
   padding: 3rem;
-  flex-direction: row-reverse;
   justify-content: center;
   
 }
@@ -16,25 +9,23 @@
 .link{
     display: flex;
     justify-content: center;
-    font-size: 2.5rem;
-    margin-top: 2rem;
+    margin-top: 3rem;
     list-style: none;
 }
 
 
 .li{
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background-color: #ffffff;
-  padding: 1rem;
-  border-radius: 18px;
+  border-radius: 16px;
   transition: .3s;
   font-weight: bold;
-  width: 80%;
-  font-size: 1.5rem;
-  -webkit-box-shadow: 0px 3px 0px 0px rgba(0,0,0,1);
-  -moz-box-shadow: 0px 3px 0px 0px rgba(0,0,0,1);
-  box-shadow: 0px 3px 0px 0px rgba(0,0,0,1);
-  font-family: var(--agradir-widelight);
-
+  width: 11.68rem;
+  height: 2.81rem;
+  font-size: 1rem;
+  font-family: var(--agradir-bold);
 }
 
 .logo{
@@ -44,13 +35,51 @@
 
 }
 
-.arte{
-  width: 230px;
-  height: 200px;
-  object-fit: contain;
+.container{
+  background-color: #2895d2;
+  height: 100%;
+  position: relative;
 }
 
-.container{
-  background-color: #2895D2;
-  height: 100%;
+.container_header{
+  display: flex;
+  position: relative;
+  padding: 2rem;
+}
+
+.petro{
+  object-fit: contain;
+  position: absolute;
+  top: 10%;
+  left: 35%;
+}
+
+
+.p1{
+  font-size: .5rem;
+  color: #fff;
+  text-wrap: nowrap;
+  font-family: var(--agradir-regular);
+  
+}
+
+.p2{
+  font-size: .5rem;
+  color: #fff;
+  font-family: var(--agradir-regular);
+  position: absolute;
+  top: 65%;
+}
+
+.arte{
+  width: 20rem;
+  object-fit: contain;
+  padding: 1rem;
+  position: absolute;
+  top: 40%;
+}
+
+.rodape{
+  margin-top: 12rem;
+  width: 375px;
 }
