--- a/src/app/components/header/header.module.css
+++ b/src/app/components/header/header.module.css
@@ -1,37 +1,88 @@
 .title{
      text-align: center;
+     position: relative;
 }
 
-.dia{
-     font-size: 3rem;
-     color: #fff;
-     text-shadow: 2px 2px 0px #000000;
-     height: 2.9rem;
-     font-family: var(--agradir-grandlight);
-}
-
-.mes{
-     font-size: 2.5rem;
-     color: #F8FCFC;
-     text-shadow: 2px 2px 0px #000000;
-     height: 2.5rem;
-     margin-bottom: .5rem;
-     font-family: var(--agradir-grandheavy);
-
-
+.date_container{
+     display: flex;
+     flex-direction: column;
+     justify-content: center;
+     margin-top: 1rem;
+     gap: .2rem;
+     padding: .5rem;
 }
 
 .mostra{
-     color: #2794DA;
-     text-shadow: 2px 2px 0px #000000;
-     font-size: 1.2rem;
+     color: #ffffff;
+      font-size: 1.2rem;
      font-family: var(--agradir-grandheavy);
-
-
 }
+
+.dia{
+     font-size: 1.4rem;
+     color: #fff;
+     height: 2.9rem;
+     font-family: var(--agradir-bold);
+     height: 0;
+}
+
+.mes{
+     font-size: 1.4rem;
+     color: #F8FCFC;
+     font-family: var(--agradir-grandlight);
+     height: 0;
+}
+
+
 
 .diasemana{
      color: #F8FCFC;
-     text-shadow: 1px 1px 0px #000000;
-     font-family: var(--agradir-grandlight);
+     font-family: var(--agradir-bold);
+     padding: 1.3rem;
+}
+
+.art{
+     object-fit: cover;
+     margin-left: -10.1rem;
+}
+
+.luneta1{
+     position: absolute;
+     top: 4%;
+     left: 4%;
+     width: 6rem;
+     object-fit: contain;
+
+}
+
+.luneta2{
+     position: absolute;
+     top: 36%;
+     left: 2%;
+     width: 9rem;
+     object-fit: contain;
+}
+
+.flor{
+     position: absolute;
+     bottom: 35%;
+     right: 0;
+     width: 8rem;
+     object-fit: contain;
+     
+}
+
+.logo{
+     position: absolute;
+     top: -2%;
+     right: -3%;
+     padding: 1.2rem;
+     width: 11rem;
+     object-fit: contain;
+}
+
+.date{
+     display: flex;
+     justify-content: center;
+     gap: .2rem;
 }
