removing header from screen 3 and updating png to svg

--- a/src/app/mostra-panorama-22-11/confirmeseuvoto/confirmeseuvoto.module.css
+++ b/src/app/mostra-panorama-22-11/confirmeseuvoto/confirmeseuvoto.module.css
@@ -5,7 +5,8 @@
 
 .title{
       text-align: center;
-      margin: 1rem;
+      /* margin: 1rem; */
+      padding: 1rem;
       color: #FFF;
       font-family: var(--agradir-grandheavy);
 }
