--- a/src/app/components/moviecard/moviecard.module.css
+++ b/src/app/components/moviecard/moviecard.module.css
@@ -116,21 +116,16 @@
 
 
 .submitButton{
-     background-color: #ffffff;
-     color: #000000;
-     border-radius: 4rem;
-     padding: .5rem 1rem .5rem 1rem;
-     cursor: pointer;
+     color: #ffffff;
+     background-color: #000000;
+     border-radius: 16px;
+     padding: 1rem;
      margin-bottom: 1rem;
      font-size: 1.5rem;
      border: none;
-     -webkit-box-shadow: 0px 3px 0px 0px rgba(0,0,0,1);
-     -moz-box-shadow: 0px 3px 0px 0px rgba(0,0,0,1);
-     box-shadow: 0px 3px 0px 0px rgba(0,0,0,1);
      opacity: 1;
-     position: relative;
      z-index: 10;
-     font-family: var(--agradir-widelight);
+     font-family: var(--agradir-bold);
 }
 
 
