--- a/src/app/mostra-panorama-22-11/confirmeseuvoto/confirmeseuvoto.module.css
+++ b/src/app/mostra-panorama-22-11/confirmeseuvoto/confirmeseuvoto.module.css
@@ -3,16 +3,59 @@
       height: 100%;
 }
 
+.header{
+      padding-left: 2rem;
+}
+
+.date{
+      display: flex;
+      align-items: baseline;
+      color: #fff;
+      gap: .3rem;
+}
+
+
 .title{
-      text-align: center;
-      /* margin: 1rem; */
-      padding: 1rem;
-      color: #FFF;
+      text-align: start;
+      font-size: 1rem;
+      padding-top: 4rem;
       font-family: var(--agradir-grandheavy);
 }
 
+.h2{
+      color: #FFF;
+      font-family: var(--agradir-grandheavy);
+      font-size: .9rem;
+      margin-top: 1.2rem;
+}
+
+.dia{
+      font-size: 1rem;
+      color: #fff;
+      height: 2.9rem;
+      font-family: var(--agradir-bold);
+      height: 0;
+      
+}
+
+.mes{
+      font-size: 1rem;
+      color: #F8FCFC;
+      font-family: var(--agradir-grandlight);
+      height: 0;
+      padding-top: .3rem;
+
+}
+
+.diasemana{
+      color: #F8FCFC;
+      font-family: var(--agradir-bold);
+      font-size: 1rem;
+      padding-top: .3rem;
+ }
+
 .paragraph{
-     text-align: center;
+      text-align: center;
      /* margin-top: 50vh; */
      color: #FFF;
 }
@@ -23,33 +66,26 @@
       justify-content: center;
       align-items: center;
       margin-top: 2rem;
-      /* height: 100%; */
       background-color: #B93368;
 
 }
 
 .button{
       border-style: none;
-      font-size: 1.5rem;
-      width: 70%;
-      background-color: #f4f4f4;
-      color: #000;
-      font-weight: bold;
+      font-size: 1rem;
+      width: 40%;
+      background-color: #000;
+      color: #fff;
       border-radius: 18px;
+      padding: .8rem;
+      font-family: var(--agradir-bold);
       text-align: center;
-      text-decoration: none;
-      padding: .5rem;
-      -webkit-box-shadow: 0px 3px 0px 0px rgba(0,0,0,1);
-      -moz-box-shadow: 0px 3px 0px 0px rgba(0,0,0,1);
-      box-shadow: 0px 3px 0px 0px rgba(0,0,0,1);
-      font-family: var(--agradir-grandlight);
-
 }
 
 
 .button2{
       border-style: none;
-      width: 45%;
+      width: 40%;
       font-size: .9rem;
       color: #ffffff;
       font-weight: bold;
@@ -57,27 +93,32 @@
       text-align: center;
       text-decoration: none;
       padding: .5rem;
-      border: .1rem rgb(255, 255, 255) solid;
+      border: .16rem rgb(0, 0, 0) solid;
       margin-top: 1.1rem;
       margin-bottom: 1.5rem;
-      font-family: var(--agradir-grandlight);
+      font-family: var(--agradir-regular);
 }
 
-.warning{
-      text-align: center;
-      color: #FFF;
-      font-size: .7rem;
-      width: 70%;
-      margin-top: .2rem;
-      font-family: var(--agradir-regular);
- }
 
  .container{
-      padding: 0 1.4rem 0 1.4rem;
+      padding: 0 2rem 0 2rem;
       display: flex;
       flex-direction: column;
       justify-content: center;
-      
+      margin-top: 2.5rem;
  }
 
+ .body2{
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+ }
 
+ .logo{
+      position: absolute;
+      width: 7rem;
+      right: 0;
+      top: 5%;
+      height: auto;
+      padding: 1rem;
+ }
