--- a/src/app/mostra-panorama-22-11/confirmeseuvoto/finalizar/agradecimento/agradecimento.module.css
+++ b/src/app/mostra-panorama-22-11/confirmeseuvoto/finalizar/agradecimento/agradecimento.module.css
@@ -4,18 +4,65 @@
      align-items: center;
      height: 100%;
      flex-direction: column;
-     background-color: #000;
-
+     background-color: #f9cdda;
 }
 
 .title{
      font-size: 1.2rem;
-     color: #fff;
-     font-family: var(--agradir-wideblackitalic);
+     color: #000000;
+     font-family: var(--agradir-grandheavy);
 }
 
 .subtitle{
-     color: #fff;
-     font-size: 1rem;
-     font-family: var(--agradir-grandlight);
+     color: #ba3368;
+     font-size: 1.2rem;
+     font-family: var(--agradir-grandheavy);
+}
+
+.lateral{
+     position: absolute;
+     object-fit: contain;
+     left: -5%;
+     width: 50%;
+     max-height: 100%;
+     z-index: 1;
+}
+
+.logo{
+     position: absolute;
+     top: 2%;
+}
+
+.flor{
+     position: absolute;
+     bottom: 3%;
+     left: 20%;
+     width: 12rem;
+}
+
+.button{
+     text-align: center;
+     padding: 1rem;
+     background-color: #000000;
+     color: #FFF;
+     border-radius: 18px;
+     font-family: var(--agradir-bold);
+     width: 30%;
+     margin-top: 2rem;
+}
+
+.text{
+     display: flex;
+     flex-direction: column;
+     justify-content: center;
+     align-items: center;
+     margin-top: 1rem;
+}
+
+.laterald{
+     position: fixed;
+     object-fit: contain;
+     right: -9%;
+     width: 50%;
+     max-height: 100%;
 }
