--- a/src/app/components/moviecard/moviecard.module.css
+++ b/src/app/components/moviecard/moviecard.module.css
@@ -20,6 +20,7 @@
     box-shadow: 0px 0px 16px -5px rgba(0,0,0,1);
     position: relative;
     z-index: 10;
+    margin-bottom: 2rem;
    }
    
 .container{
@@ -116,8 +117,8 @@
 
 
 .submitButton{
-     color: #ffffff;
-     background-color: #000000;
+     color: #000;
+     background-color: #fff;
      border-radius: 16px;
      padding: 1rem;
      margin-bottom: 1rem;
@@ -142,13 +143,14 @@
   font-size: 1.4rem;
   font-family: var(--agradir-grandheavy);
   font-size: 1rem;
+  color: #ba3368;
 }
 
 .sinopse{
   text-align: center;
   font-size: .77rem;
   padding: 1rem;
-  font-family: var(--agradir-widelight);
+  font-family: var(--agradir-regular);
 
 }
 
