--- a/src/app/mostra-panorama-22-11/confirmeseuvoto/finalizar/agradecimento/agradecimento.module.css
+++ b/src/app/mostra-panorama-22-11/confirmeseuvoto/finalizar/agradecimento/agradecimento.module.css
@@ -26,6 +26,7 @@
      width: 50%;
      max-height: 100%;
      z-index: 1;
+     transition: 1s;
 }
 
 .logo{
@@ -38,6 +39,7 @@
      bottom: 3%;
      left: 20%;
      width: 12rem;
+     transition: 1s;
 }
 
 .button{
@@ -65,4 +67,5 @@
      right: -9%;
      width: 50%;
      max-height: 100%;
+     transition: 1s;
 }
