--- a/src/app/components/moviecard/moviecard.module.css
+++ b/src/app/components/moviecard/moviecard.module.css
@@ -33,7 +33,7 @@
 .title{
     font-size: 1rem;
     text-align: center;
-    color: #000000;
+    color: #2895d2;
     font-family: var(--agradir-grandheavy);
     
     
@@ -90,6 +90,8 @@
   margin-top: .5rem;
   font-size: .8rem;
   font-family: var(--agradir-regular);
+  margin-bottom: .5rem;
+  
   
 }
 
@@ -117,8 +119,8 @@
 
 
 .submitButton{
-     color: #000;
-     background-color: #fff;
+     color: #fff;
+     background-color: #000;
      border-radius: 16px;
      padding: 1rem;
      margin-bottom: 1rem;
@@ -127,14 +129,19 @@
      opacity: 1;
      z-index: 10;
      font-family: var(--agradir-bold);
+     -webkit-box-shadow: 0px 7px 25px -5px rgba(0,0,0,0.75);
+     -moz-box-shadow: 0px 7px 25px -5px rgba(0,0,0,0.75);
+     box-shadow: 0px 7px 25px -5px rgba(0,0,0,0.75);
+     height: 3.8rem;
 }
 
 
 
 .subdescription{
-  font-size: .75rem;
+  font-size: .6rem;
   text-align: center;
-  font-family: var(--agradir-grandlight);
+  font-family: var(--agradir-regular);
+  margin-bottom: .8rem;
 
 }
 
@@ -147,9 +154,9 @@
 }
 
 .sinopse{
-  text-align: center;
+  text-align: start;
   font-size: .77rem;
-  padding: 1rem;
+  /* padding: 1rem; */
   font-family: var(--agradir-regular);
 
 }
