--- a/src/app/components/moviecard24/moviecard.module.css
+++ b/src/app/components/moviecard24/moviecard.module.css
@@ -169,35 +169,12 @@ height: 2rem;
 margin-bottom: .5rem;
 }
 
-.liner{
-z-index: 1;
-width: 4rem;
-height: 30px;
-object-fit: contain;
-
+@media (max-width: 320px){
+  .title{
+    font-size: .9rem;
+    text-align: center;
+    color: #2895d2;
+    font-family: var(--agradir-grandheavy);
 }
 
-.linel{
-z-index: 1;
-width: 4rem;
-height: 30px;
-object-fit: contain;
 }
-
-/* .fundor{
-position: absolute;
-object-fit: contain;
-width: 2.98rem;
-top: 40%;
-right: -17%;
-z-index: 0;
-}
-
-.fundol{
-position: absolute;
-object-fit: contain;
-width: 2.95rem;
-top: 40%;
-left: -17%;
-z-index: 0;
-} */
