--- a/src/app/mostra-panorama-23-11/confirmeseuvoto/confirmeseuvoto.module.css
+++ b/src/app/mostra-panorama-23-11/confirmeseuvoto/confirmeseuvoto.module.css
@@ -1,10 +1,22 @@
 .body{
       background-color: #B93368;
       height: 100%;
+      position: relative;
+
 }
+.body_container{
+      background-image: url("../../assets/textura-screen3.png");
+      position: absolute;
+      width: 100%;
+      background-color: #B93368;
+}
+
 
 .header{
       padding-left: 2rem;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
 }
 
 .date{
@@ -65,12 +77,14 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      margin-top: 2rem;
+      /* margin-top: 2rem; */
       background-color: #B93368;
 
 }
 
 .button{
+      position: absolute;
+      top: 80%;
       border-style: none;
       font-size: 1rem;
       width: 40%;
@@ -87,6 +101,8 @@
 
 
 .button2{
+      position: absolute;
+      top: 90%;
       border-style: none;
       width: 35%;
       font-size: .7rem;
@@ -107,17 +123,20 @@
 
 
  .container{
-      padding: 0 2rem 0 2rem;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      margin-top: 2.5rem;
+      height: 80%;
+      background-color: #B93368;
  }
 
  .body2{
+      height: 100%;
+      padding: 6rem 1.8rem 1.8rem 1.8rem;
       display: flex;
       flex-direction: column;
-      gap: 1rem;
+      background-image: url("../../assets/Textura 0.75x.png");
+      background-repeat: round;
+      background-color: #B93368;
+      
+
  }
 
  .logo{
@@ -128,3 +147,67 @@
       height: auto;
       padding: 1rem;
  }
+
+ @media (max-width: 320px){
+      
+      .header{
+            padding-left: 2.5rem;
+      }
+      
+      .date{
+            display: flex;
+            align-items: baseline;
+            color: #fff;
+            gap: .3rem;
+      }
+      
+      
+      .title{
+            text-align: start;
+            font-size: .8rem;
+            padding-top: 4rem;
+            font-family: var(--agradir-grandheavy);
+      }
+      
+      .h2{
+            color: #FFF;
+            font-family: var(--agradir-grandheavy);
+            font-size: .65rem;
+            margin-top: 1.2rem;
+      }
+      
+      .dia{
+            font-size: .9rem;
+            color: #fff;
+            height: 2.9rem;
+            font-family: var(--agradir-bold);
+            height: 0;
+            
+      }
+      
+      .mes{
+            font-size: .9rem;
+            color: #F8FCFC;
+            font-family: var(--agradir-widelight);
+            height: 0;
+            padding-top: .5rem;
+      
+      }
+      
+      .diasemana{
+            color: #F8FCFC;
+            font-family: var(--agradir-bold);
+            font-size: .9rem;
+            padding-top: .3rem;
+       }
+    
+
+       .logo{
+            position: absolute;
+            width: 7rem;
+            right: 0;
+            top: 5%;
+            height: auto;;
+            padding: 1rem;
+       }
+    }
