--- a/src/app/mostra-panorama-23-11/confirmeseuvoto/finalizar/finalizar.module.css
+++ b/src/app/mostra-panorama-23-11/confirmeseuvoto/finalizar/finalizar.module.css
@@ -87,7 +87,7 @@
 .luneta2{
   position: absolute;
   top: 8%;
-  left: 8%;
+  left: 10%;
   width: 7rem;
   object-fit: contain;
   z-index: 1;
@@ -108,15 +108,16 @@
   left: -6%;
   bottom: 0;
   z-index: 0;
-  padding: 8rem 3rem 1rem 0;
+  width: 8rem;
+  height: auto;
 }
 
 .luneta1{
   position: absolute;
   width: 4rem;
   object-fit: contain;
-  left: 6%;
-  bottom: 13%;
+  left: 9%;
+  bottom: 15%;
   
 }
 
@@ -133,4 +134,28 @@
   bottom: 0;
   z-index: 0;
   width: 10rem;
+}
+
+@media (max-width: 320px) {
+  .h1 {
+    margin-bottom: 20px;
+    padding: 1rem;
+    color: #ffffff; /* Cor do texto do título */
+    text-align: center;
+    font-size: .9rem;
+    font-family: var(--agradir-bold);
+    text-wrap: balance;
+    margin-top: 2rem;
+    padding: 0 5rem 0 5rem;
+  }
+
+  .input {
+    padding: 10px;
+    border-style: none;
+    border-radius: 24px; 
+    width: 300px;
+    font-size: 1rem;
+    text-align: center;
+    font-family: var(--agradir-narrowgrandlight);
+  }
 }
