--- a/src/app/mostra-panorama-23-11/confirmeseuvoto/confirmeseuvoto.module.css
+++ b/src/app/mostra-panorama-23-11/confirmeseuvoto/confirmeseuvoto.module.css
@@ -1,8 +1,8 @@
 .body{
       background-color: #B93368;
-      height: 100%;
+      height: 100vh;
       position: relative;
-
+      overflow-y: hidden;
 }
 .body_container{
       background-image: url("../../assets/textura-screen3.png");
