fixing header from screen 3

--- a/src/app/mostra-panorama-23-11/confirmeseuvoto/confirmeseuvoto.module.css
+++ b/src/app/mostra-panorama-23-11/confirmeseuvoto/confirmeseuvoto.module.css
@@ -63,7 +63,7 @@
       color: #F8FCFC;
       font-family: var(--agradir-bold);
       font-size: 1rem;
-      padding-top: .3rem;
+      padding-top: 1rem;
  }
 
 .paragraph{
@@ -198,7 +198,7 @@
             color: #F8FCFC;
             font-family: var(--agradir-bold);
             font-size: .9rem;
-            padding-top: .3rem;
+            padding-top: 1rem;
        }
     
 
