--- a/src/app/mostra-panorama-25-11/confirmeseuvoto/confirmeseuvoto.module.css
+++ b/src/app/mostra-panorama-25-11/confirmeseuvoto/confirmeseuvoto.module.css
@@ -1,10 +1,22 @@
 .body{
       background-color: #B93368;
-      height: 100%;
+      height: 100vh;
+      position: relative;
+      overflow-y: auto;
 }
+.body_container{
+      background-image: url("../../assets/textura-screen3.png");
+      position: absolute;
+      width: 100%;
+      background-color: #B93368;
+}
+
 
 .header{
       padding-left: 2rem;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
 }
 
 .date{
@@ -41,7 +53,7 @@
 .mes{
       font-size: 1rem;
       color: #F8FCFC;
-      font-family: var(--agradir-grandlight);
+      font-family: var(--agradir-widelight);
       height: 0;
       padding-top: .3rem;
 
@@ -51,7 +63,7 @@
       color: #F8FCFC;
       font-family: var(--agradir-bold);
       font-size: 1rem;
-      padding-top: .3rem;
+      padding-top: 1.2rem;
  }
 
 .paragraph{
@@ -65,54 +77,65 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      margin-top: 2rem;
+      /* background-color: #B93368; */
+      height: 50%;
+}
+.body2{
+      height: 100%;
+      padding: 6rem 1.8rem 1.8rem 1.8rem;
+      display: flex;
+      flex-direction: column;
+      background-image: url("../../assets/Textura 0.75x.png");
+      background-repeat: round;
       background-color: #B93368;
 
-}
+      
+
+ }
 
 .button{
       border-style: none;
       font-size: 1rem;
-      width: 40%;
+      min-width: 40%;
       background-color: #000;
       color: #fff;
       border-radius: 18px;
-      padding: .8rem;
+      padding: .8rem .8rem .6rem .8rem;
       font-family: var(--agradir-bold);
       text-align: center;
+      -webkit-box-shadow: 2px 9px 14px -7px rgba(0,0,0,0.75);
+      -moz-box-shadow: 2px 9px 14px -7px rgba(0,0,0,0.75);
+      box-shadow: 2px 9px 14px -7px rgba(0,0,0,0.75);
 }
 
 
 .button2{
       border-style: none;
-      width: 40%;
-      font-size: .9rem;
+      min-width: 35%;
+      font-size: .7rem;
       color: #ffffff;
       font-weight: bold;
       border-radius: 1.5rem;
+      background-color:#B93368 ;
       text-align: center;
       text-decoration: none;
-      padding: .5rem;
+      padding: .5rem .5rem .4rem .5rem;
       border: .16rem rgb(0, 0, 0) solid;
       margin-top: 1.1rem;
       margin-bottom: 1.5rem;
       font-family: var(--agradir-regular);
+      -webkit-box-shadow: 2px 9px 14px -7px rgba(0,0,0,0.75);
+      -moz-box-shadow: 2px 9px 14px -7px rgba(0,0,0,0.75);
+      box-shadow: 2px 9px 14px -7px rgba(0,0,0,0.75);
 }
 
 
  .container{
-      padding: 0 2rem 0 2rem;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      margin-top: 2.5rem;
+      height: 80%;
+      background-color: #B93368;
  }
 
- .body2{
-      display: flex;
-      flex-direction: column;
-      gap: 1rem;
- }
+
 
  .logo{
       position: absolute;
@@ -122,3 +145,67 @@
       height: auto;
       padding: 1rem;
  }
+
+ @media (max-width: 320px){
+      
+      .header{
+            padding-left: 2.5rem;
+      }
+      
+      .date{
+            display: flex;
+            align-items: baseline;
+            color: #fff;
+            gap: .3rem;
+      }
+      
+      
+      .title{
+            text-align: start;
+            font-size: .8rem;
+            padding-top: 4rem;
+            font-family: var(--agradir-grandheavy);
+      }
+      
+      .h2{
+            color: #FFF;
+            font-family: var(--agradir-grandheavy);
+            font-size: .65rem;
+            margin-top: 1.2rem;
+      }
+      
+      .dia{
+            font-size: .9rem;
+            color: #fff;
+            height: 2.9rem;
+            font-family: var(--agradir-bold);
+            height: 0;
+            
+      }
+      
+      .mes{
+            font-size: .9rem;
+            color: #F8FCFC;
+            font-family: var(--agradir-widelight);
+            height: 0;
+            padding-top: .5rem;
+      
+      }
+      
+      .diasemana{
+            color: #F8FCFC;
+            font-family: var(--agradir-bold);
+            font-size: .9rem;
+            padding-top: 1rem;
+       }
+    
+
+       .logo{
+            position: absolute;
+            width: 7rem;
+            right: 0;
+            top: 5%;
+            height: auto;;
+            padding: 1rem;
+       }
+    }
