--- a/src/app/mostra-panorama-23-11/confirmeseuvoto/finalizar/finalizar.module.css
+++ b/src/app/mostra-panorama-23-11/confirmeseuvoto/finalizar/finalizar.module.css
@@ -45,6 +45,8 @@
    
    .button {
     font-family: var(--agradir-bold);
+    display: flex;
+    justify-content: center;
      padding: .8rem .8rem .6rem .8rem;
      border: none; /* Remove a borda padrão do botão */
      border-radius: 18px; /* Bordas arredondadas */
@@ -67,6 +69,30 @@
     transform: scale(0.95); /* Reduz ligeiramente o botão */
     box-shadow: 1px 4px 8px -4px rgba(0, 0, 0, 0.75); /* Reduz a sombra */
   }
+/* Spinner */
+.spinner {
+  width: 20px;
+  height: 20px;
+  border: 3px solid #fff;        /* Cor da borda externa */
+  border-top: 3px solid #007BFF;
+  border-radius: 50%;             
+  animation: spin 1s linear infinite; 
+}
+
+/* Definição da animação */
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+/* Estilo do botão desativado */
+.button:disabled {
+  background-color: #ba3369f9;
+  cursor: not-allowed;
+  opacity: 0.7;
+}
+
+
 
 .logo{
   width: 35%;
