adding dynamic day at headers

--- a/src/app/mostra-panorama-23-11/confirmeseuvoto/finalizar/finalizar.module.css
+++ b/src/app/mostra-panorama-23-11/confirmeseuvoto/finalizar/finalizar.module.css
@@ -105,6 +105,7 @@
 
 .error{
   color: #BA3368;
+  font-family: var(--agradir-bold);
 }
 
 
@@ -150,7 +151,7 @@
   object-fit: contain;
   left: 9%;
   bottom: 15%;
-  
+  z-index: 0;
 }
 
 .coral3{
