--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -3,7 +3,6 @@
   display: flex;
   padding: 3rem;
   justify-content: center;
-  
 }
 
 .link{
@@ -87,6 +86,7 @@
   padding: 1rem;
   position: absolute;
   top: 40%;
+  margin-left: .5rem;
 }
 
 .rodape{
@@ -118,6 +118,9 @@
 }
 }
 
+.waiting{
+  margin-left: 1rem;
+}
 
 .aguarde{
   font-family: var(--agradir-grandheavy);
