--- a/src/app/components/moviecard24/moviecard.module.css
+++ b/src/app/components/moviecard24/moviecard.module.css
@@ -167,6 +167,13 @@ height: 2rem;
 margin-bottom: .5rem;
 }
 
+.tipo{
+  color: #FFF;
+  padding: 1rem;
+  text-align: center;
+  font-family: var(--agradir-bold);
+}
+
 @media (max-width: 320px){
 .title{
  font-size: .9rem;
