changin css from confimeseuvoto body

--- a/src/app/mostra-panorama-23-11/confirmeseuvoto/confirmeseuvoto.module.css
+++ b/src/app/mostra-panorama-23-11/confirmeseuvoto/confirmeseuvoto.module.css
@@ -1,6 +1,6 @@
 .body{
       background-color: #B93368;
-      height: 100vh;
+      height: 100%;
       position: relative;
       overflow-y: hidden;
 }
