--- a/src/app/components/moviecard25/moviecard.module.css
+++ b/src/app/components/moviecard25/moviecard.module.css
@@ -150,7 +150,7 @@ color: #ba3368;
 }
 
 .sinopse{
-text-align: start;
+text-align: center;
 font-size: .77rem;
 padding: .5rem 1rem 1rem 1.4rem;
 font-family: var(--agradir-regular);
