--- a/src/app/mostra-panorama-25-11/confirmeseuvoto/finalizar/finalizar.module.css
+++ b/src/app/mostra-panorama-25-11/confirmeseuvoto/finalizar/finalizar.module.css
@@ -44,9 +44,12 @@
 }
 
 .button {
- font-family: var(--agradir-bold);
- display: flex;
- justify-content: center;
+  font-family: var(--agradir-bold);
+  display: flex;
+  justify-content: center;
+  /* position: absolute;
+  bottom: 10%;
+  z-index: 2; */
   padding: .8rem .8rem .6rem .8rem;
   border: none; /* Remove a borda padrão do botão */
   border-radius: 18px; /* Bordas arredondadas */
