residual images was removed and finalizar page button style was changed

--- a/src/app/mostra-competitiva-20-11/confirmeseuvoto/confirmeseuvoto.module.css
+++ b/src/app/mostra-competitiva-20-11/confirmeseuvoto/confirmeseuvoto.module.css
@@ -5,7 +5,7 @@
       overflow-y: hidden;
 }
 .body_container{
-      background-image: url("../../assets/textura-screen3.png");
+      /* background-image: url("../../assets/textura-screen3.png"); */
       position: absolute;
       width: 100%;
       /* background-color: #B93368; */
