--- a/src/app/mostra-competitiva-20-11/confirmeseuvoto/finalizar/agradecimento/agradecimento.module.css
+++ b/src/app/mostra-competitiva-20-11/confirmeseuvoto/finalizar/agradecimento/agradecimento.module.css
@@ -45,6 +45,7 @@
      -webkit-box-shadow: 2px 9px 14px -7px rgba(0,0,0,0.75);
      -moz-box-shadow: 2px 9px 14px -7px rgba(0,0,0,0.75);
      box-shadow: 2px 9px 14px -7px rgba(0,0,0,0.75);
+     z-index: 1000;
 }
 
 .text{
