--- a/src/app/mostra-competitiva-20-11/page.module.css
+++ b/src/app/mostra-competitiva-20-11/page.module.css
@@ -19,7 +19,7 @@
 }
 
 .main{
-     background-image: url('../assets/mostra2025/SERPENTE 3.png');
+     /* background-image: url('../assets/mostra2025/SERPENTE 3.png'); */
 }
 
 .mes{
