--- a/src/app/components/moviecard20/moviecard.module.css
+++ b/src/app/components/moviecard20/moviecard.module.css
@@ -157,7 +157,7 @@
   font-size: 1.4rem;
   font-family: var(--agradir-grandheavy);
   font-size: 1rem ;
-  color: #000;
+  color: #1a3c34;
 }
 
 .sinopse{
