--- a/src/app/mostra-competitiva-20-11/confirmeseuvoto/finalizar/agradecimento/agradecimento.module.css
+++ b/src/app/mostra-competitiva-20-11/confirmeseuvoto/finalizar/agradecimento/agradecimento.module.css
@@ -2,7 +2,7 @@
      display: flex;
      justify-content: center;
      align-items: center;
-     height: 100%;
+     height: 90%;
      flex-direction: column;
      background-color: #00A343;
 }
@@ -21,20 +21,9 @@
 
 
 .logo{
-     position: absolute;
-     top: -50%;
-     right: 4%;
      width: 8rem;
      filter: invert(100%) brightness(200%);
-     
-}
-
-.flor{
-     position: absolute;
-     bottom: 3%;
-     left: 20%;
-     width: 12rem;
-     transition: 1s;
+     margin-top: 4rem;
 }
 
 .button{
@@ -58,11 +47,12 @@
      justify-content: center;
      align-items: center;
      margin-top: 1rem;
+     
 }
 
 
 .manganga{
-     position: absolute;
+     position: sticky;
      bottom: 0;
      width: 18eem;
      object-fit: cover;
@@ -116,14 +106,15 @@
 .buttonForm {
   margin-top: 25px;
   padding: 14px 22px;
-  border-radius: 12px;
-  background: #222;
+  border-radius: 8px;
+  background: #fb5373;
   color: #fff;
   border: none;
   font-size: 1.1rem;
   font-weight: 600;
   cursor: pointer;
   transition: 0.2s;
+  width: 40%;
 }
 
 .buttonForm:hover {
@@ -143,12 +134,14 @@
   font-size: 1.6rem;
   font-weight: bold;
   margin-bottom: 10px;
+   font-family: var(--neue-bold);
 }
 
 .group {
   display: flex;
   flex-direction: column;
   gap: 6px;
+  font-family: var(--neue-regular);
 }
 
 .outroInput {
@@ -227,4 +220,40 @@
   padding: 7px 10px;
   border-radius: 6px;
   border: 1px solid #ccc;
+}
+
+.footer{
+  height: 500px;
+  background-color: #FFF;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.sorteio{
+    font-family: var(--neue-bold);
+    padding: 1rem;
+    text-align: center;
+    color: #fb5373;
+
+
+}
+
+.paragrafo{
+  text-align: center;
+  font-family: var(--neue-regular);
+  color: #1a3c34;
+
+}
+
+.lista{
+    font-family: var(--neue-regular);
+    padding: 2rem;
+    list-style: none;
+    color: #1a3c34;
+}
+
+.sol{
+     width: 18em;
+     padding: 3rem;
 }
