--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -10,7 +10,6 @@
     justify-content: center;
     list-style: none;
     margin-top: 15rem;
-
 }
 
 
@@ -23,10 +22,11 @@
   border-radius: 16px;
   transition: .3s;
   font-weight: bold;
-  width: 11.68rem;
-  height: 2.81rem;
+  width: 10.68rem;
+  height: 2.60rem;
   font-size: 1rem;
-  font-family: var(--agradir-bold);
+  font-family: var(--neue-bold);
+  
 }
 
 .li:hover {
@@ -45,6 +45,7 @@
   object-fit: contain;
   position: absolute;
   right: 0;
+  filter: invert(100%) brightness(300%);
 
 }
 
@@ -58,12 +59,6 @@
   display: flex;
   position: relative;
   padding: 2rem;
-}
-
-.petro{
-  position: absolute;
-  top: -30%;
-  width: 60%;
 }
 
 
@@ -103,13 +98,13 @@
   top: 14%;
 }
 
-.star{
-  position: absolute;
-  width: 40px;
-  height: 40px;
-  left: 50%;
-  transform: translateX(-50%);
-  top: 60%;
+
+
+.headersubtitle{
+  color: #fff;
+  font-family: var(--bold);
+  font-size: 1rem;
+  padding-top: .5rem;
 }
 
 @media (max-width: 320px) {
@@ -122,9 +117,11 @@
 }
 
 .logo{
+  filter: invert(100%) brightness(300%);
   width: 140px;
   height: 140px;
   object-fit: contain;
+
 
 }
 .arte{
